--- a/res/layout-large-notouch/update_item_view.xml
+++ b/res/layout-large-notouch/update_item_view.xml
@@ -34,7 +34,7 @@
                 android:paddingBottom="8sp"
                 android:textColor="?android:attr/textColorPrimary"
                 android:textSize="16sp"
-                tools:text="PixelPlusUi 15.1" />
+                tools:text="Cherish OS v3.6" />
 
             <TextView
                 android:id="@+id/build_date"
