--- a/res/layout/update_item_view.xml
+++ b/res/layout/update_item_view.xml
@@ -33,7 +33,7 @@
                 android:paddingBottom="8sp"
                 android:textColor="@color/theme_accent"
                 android:textSize="16sp"
-                tools:text="PixelPlusUi 15.1" />
+                tools:text="Cherish v3.7" />
 
             <TextView
                 android:id="@+id/build_date"
